--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.1.3",
     "babel-preset-es2015": "^6.24.1",
     "bootstrap": "^5.3.0",
+    "browser-router": "^0.2.0",
     "crypto-js": "^4.1.1",
     "currency-to-words": "^0.4.0",
     "env-cmd": "^10.1.0",
