--- a/package.json
+++ b/package.json
@@ -27,17 +27,24 @@
     "powerbi-client-react": "^1.4.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-csv": "^2.2.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-idle-timer": "^5.6.2",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.1",
     "react-scripts": "^5.0.1",
+    "react-tag-input": "^6.8.1",
     "react-toastify": "^9.1.3",
+    "reactstrap": "^9.2.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.3",
     "redux-thunk": "^2.4.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
